Layout issues

--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -81,6 +81,10 @@ hr {
 
 .ngx-gallery-image {
   border: 1px solid $border-color;
+  z-index: 100 !important;
+}
+.ngx-gallery-arrow-wrapper, .ngx-gallery-icon {
+  z-index: 200 !important;
 }
 
 body.dark {
